--- a/main.css
+++ b/main.css
@@ -1,55 +1,74 @@
 body {
-    max-width: 450px;
-    margin: 0 auto;
-    font-family: 'Roboto' , sans-serif;
+  max-width: 450px;
+  margin: 0 auto;
+  font-family: "Roboto", sans-serif;
 }
 
+main {
+  background-color: rgb(89, 108, 218);
+  
+}
 
 button {
-    cursor: pointer;
-    outline: none;
+  cursor: pointer;
+  outline: none;
 }
 
 input {
-    outline: none;
+  outline: none;
 }
 
-.query_container {
-    background-color: rgb(89, 108, 218);
-}
-
-.query_container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.sidebar_toggle {
+    color: white;
+    cursor: pointer;
     padding: 5%;
 }
 
+.sidebar_container {
+  display: none;
+  background-color: rgba(0,0,0,0.2);
+  padding: 5%;
+  margin-top: -61px;
+  height: 100%;
+
+}
+
+.query_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 40px;
+ 
+}
+
 .query_label {
-    font-size: 25px;
-    margin: 20px 5%;
-    color: white;
+  font-size: 25px;
+  margin: 20px 5%;
+  color: white;
 }
 
 .query_input {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
-
-.input  {
-    height: 45px;
-    padding: 0 10px;
-    border-radius: 20px;
-    border: 1px solid gray;
-    margin: 5px;
-    width: 70%;
+.input {
+  height: 45px;
+  padding: 0 10px;
+  border-radius: 20px;
+  border: 1px solid gray;
+  margin: 5px;
+  width: 70%;
 }
 
 .btn_search {
-    border-radius: 50px;
-    height: 45px;
-    width: 45px;
-    border:  none;
-    margin: 5px;
+  border-radius: 50px;
+  height: 45px;
+  width: 45px;
+  border: none;
+  margin: 5px;
+}
+
+.results_container {
+    padding: 5%;
 }
