--- a/main.css
+++ b/main.css
@@ -91,7 +91,11 @@ input {
   border: 1px solid red;
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: baseline;
 }
 .weather_details_info__sunset, .weather_details_info__sunrise, .weather_details_info__minTemp, .weather_details_info__maxTemp{
   border: 1px solid white;
+  flex-direction: row;
+  font-size: 12px;
 }
