--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -158,6 +158,7 @@ input {
 .weather_details{
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 .weather_details__temp{
@@ -187,29 +188,33 @@ input {
   flex-wrap: wrap;
   /* border: 1px solid white; */
   color: white;
+  font-family: 'Montserrat', sans-serif;
+}
+..weather_details_info__img{
+  margin: 10px;
 }
 .weather_details_info__sunset{
   /* flex: 10; */
   width: 40%;
-  border: 1px solid white;
+  /* border: 1px solid white; */
   text-align: center;
 }
 .weather_details_info__sunrise{
   /* flex: 10; */
   width: 40%;
-  border: 1px solid white;
+  /* border: 1px solid white; */
   text-align: center;
 }
 .weather_details_info__minTemp{
   /* flex: 5; */
   width: 40%;
-  border: 1px solid white;
+  /* border: 1px solid white; */
   text-align: center;
 }
 .weather_details_info__maxTemp{
   /* flex: 5; */
   width: 40%;
-  border: 1px solid white;
+  /* border: 1px solid white; */
   text-align: center;
 }
 
