--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -134,8 +134,8 @@ input {
 
 .weather_preview__resume p {
   color: #080815;
-  font-size: 20px;
-  margin: 0 10px;
+  font-size: 18px;
+  margin: 5px 10px;
 }
 
 .weather_preview__main {
@@ -143,11 +143,12 @@ input {
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  margin-top: 30px;
 }
 
 .weather_preview__main p {
   color: #080815;
-  font-size: 20px;
+  font-size: 18px;
   margin: 0 10px;
 }
 
@@ -157,8 +158,64 @@ input {
 
 .weather_preview__main img {
   width: 70%;
-  margin: 0 auto;
+  margin: -20px auto 0;
 }
+
+.weather_preview__wind {
+  display: flex;
+  flex-direction: row;
+  align-items: self-end;
+  justify-content: flex-end;
+  font-size: 15px;
+  margin: -30px 0 20px 0;
+  
+}
+
+.wind_degrees,
+.wind_speed {
+  margin: 0 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.wind_speed img,
+.north,
+.northEast,
+.east,
+.southEast,
+.south,
+.southWest,
+.west,
+.northWest {
+  width: 30px;
+  margin-bottom: 10px;
+}
+
+.northEast {
+  transform: rotate(45deg)
+}
+.east {
+  transform: rotate(90deg);
+}
+.southEst {
+  transform: rotate(135deg)
+}
+.south {
+  transform: rotate(180deg);
+}
+.southWest {
+  transform: rotate(225deg);
+}
+.west {
+  transform: rotate(270deg);
+}
+.northWest {
+  transform: rotate(315deg);
+}
+
+
 .weather_details{
   display: flex;
   flex-direction: row;
